doxygen_to_devhelp: Produce Devhelp index format v2
The old version-1 format is deprecated and now produces warnings.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=106186
Reviewed-by: Philip Withnall <withnall@endlessm.com>
[smcv: Add the .devhelp2 file to .gitignore as suggested]
Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit fa922639207de16d459983144ddad28b7abe60c2)

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -98,9 +98,9 @@ doxygen.stamp: $(wildcard $(top_srcdir)/dbus/*.[ch])
 	@touch $@
 
 if DBUS_HAVE_XSLTPROC
-html_DATA += dbus.devhelp
+html_DATA += dbus.devhelp2
 
-dbus.devhelp: $(srcdir)/doxygen_to_devhelp.xsl doxygen.stamp
+dbus.devhelp2: $(srcdir)/doxygen_to_devhelp.xsl doxygen.stamp
 	$(XSLTPROC) -o $@ $< api/xml/index.xml
 endif
 
