doc: Install highlight.pack.js if present
Newer versions of yelp-build use this instead of a jQuery syntax
highlighter.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=106171
Reviewed-by: Philip Withnall <withnall@endlessm.com>
[smcv: Also add it to .gitignore as suggested]
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -19,6 +19,7 @@ dbus-docs.tar.gz
 doxygen.stamp
 dbus-api-design.page
 dbus-api-design.html
+/highlight.pack.js
 jquery.js
 jquery.syntax.brush.html.js
 jquery.syntax.core.js
