Allow longer for tests under valgrind
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=107194

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -15,6 +15,7 @@ AM_CPPFLAGS = \
 	$(APPARMOR_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(GIO_UNIX_CFLAGS) \
+	$(VALGRIND_CFLAGS) \
 	$(NULL)
 
 # improve backtraces from test stuff
