build: Disable new gcc 8 warning -Wcast-function-type
The foreach(list, (DBusForeachFunction) free, NULL) idiom seems too
entrenched to remove it from stable branches.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=107349
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1396,10 +1396,12 @@ TP_COMPILER_WARNINGS([WARNING_CFLAGS],
   dnl   gcc can't cope with inconsistent tab/space indentation
   dnl
   dnl To be fixed one day:
+  dnl - cast-function-type is fd.o #107349
   dnl - pointer-sign is a workaround for fd.o #15522
   dnl - type-limits is probably a bug too, but having the rest of -Wextra
   dnl   is better than nothing
   [$DISABLE_UNUSED_WARNINGS \
+   cast-function-type \
    deprecated-declarations \
    missing-field-initializers \
    misleading-indentation \
