--- a/test/data/valid-config-files-system/many-rules.conf
+++ b/test/data/valid-config-files-system/many-rules.conf
@@ -26,6 +26,7 @@
     <deny send_destination="org.freedesktop.Bar" send_interface="org.freedesktop.Foo"/>
     <deny send_destination="org.freedesktop.Bar" send_interface="org.freedesktop.Foo" send_type="method_call"/>
   </policy>
+  <apparmor mode="enabled"/>
 
   <policy context="mandatory">
     <allow user="*"/>
@@ -45,6 +46,10 @@
     <deny send_destination="org.freedesktop.Bar" send_interface="org.freedesktop.Foo"/>
     <deny send_destination="org.freedesktop.Bar" send_interface="org.freedesktop.Foo" send_type="method_call"/>
   </policy>
+
+  <policy group="bin"/>
+  <policy at_console="true"/>
+  <policy at_console="false"/>
 
   <limit name="max_incoming_bytes">5000</limit>
   <limit name="max_outgoing_bytes">5000</limit>
