--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -16,7 +16,7 @@ dbus-test-plan.html
 dbus-tutorial.html
 dbus-faq.html
 dbus-docs
-dbus-docs.tar.gz
+dbus-docs.tar.xz
 doxygen.stamp
 dbus-api-design.page
 dbus-api-design.html
