--- a/test/name-test/Makefile.am
+++ b/test/name-test/Makefile.am
@@ -7,6 +7,7 @@ AM_CPPFLAGS = \
 
 AM_CFLAGS = \
 	$(CODE_COVERAGE_CFLAGS) \
+	$(SANITIZE_CFLAGS) \
 	$(NULL)
 
 # if assertions are enabled, improve backtraces
