build: Compile most bus/ files into static libraries
This means we can share them between tests without having to compile
the same file repeatedly, and makes them easier to share between
directories when we move test executables into test/.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/bus/Makefile.am
+++ b/bus/Makefile.am
@@ -82,7 +82,9 @@ DIR_WATCH_SOURCE=dir-watch-default.c
 endif
 endif
 
-BUS_SOURCES=					\
+noinst_LTLIBRARIES = libdbus-daemon-internal.la
+
+libdbus_daemon_internal_la_SOURCES =		\
 	activation.c				\
 	activation.h				\
 	activation-exit-codes.h			\
@@ -127,17 +129,17 @@ BUS_SOURCES=					\
 	utils.h					\
 	$(NULL)
 
-dbus_daemon_SOURCES=				\
-	$(BUS_SOURCES)				\
-	main.c
+libdbus_daemon_internal_la_LIBADD = \
+	$(top_builddir)/dbus/libdbus-1.la \
+	$(top_builddir)/dbus/libdbus-internal.la \
+	$(EFENCE) \
+	$(DBUS_BUS_LIBS) \
+	$(NULL)
 
-dbus_daemon_LDADD=					\
-	$(top_builddir)/dbus/libdbus-1.la	\
-	$(top_builddir)/dbus/libdbus-internal.la	\
-	$(EFENCE)					\
-	$(DBUS_BUS_LIBS)
+dbus_daemon_SOURCES = main.c
+dbus_daemon_LDADD = libdbus-daemon-internal.la
 
-LAUNCH_HELPER_SOURCES=				\
+liblaunch_helper_internal_la_SOURCES =		\
 	config-loader-expat.c			\
 	config-parser-common.c			\
 	config-parser-common.h			\
@@ -149,28 +151,33 @@ LAUNCH_HELPER_SOURCES=				\
 	utils.h					\
 	activation-exit-codes.h			\
 	activation-helper.h	  		\
-	activation-helper.c
+	$(NULL)
 
 ## This is the installed launch helper with the setuid checks
-dbus_daemon_launch_helper_SOURCES=		\
-	activation-helper-bin.c			\
-	$(LAUNCH_HELPER_SOURCES)
+## All files that have special cases #ifdef ACTIVATION_LAUNCHER_TEST must
+## be here and in dbus_daemon_launch_helper_test_SOURCES, not in
+## liblaunch-helper-internal.la.
+dbus_daemon_launch_helper_SOURCES = \
+	activation-helper.c \
+	activation-helper-bin.c \
+	$(NULL)
+dbus_daemon_launch_helper_LDADD = liblaunch-helper-internal.la
 
-dbus_daemon_launch_helper_LDADD=		\
+liblaunch_helper_internal_la_LIBADD = \
 	$(top_builddir)/dbus/libdbus-1.la \
-	$(top_builddir)/dbus/libdbus-internal.la	\
+	$(top_builddir)/dbus/libdbus-internal.la \
 	$(DBUS_LAUNCHER_LIBS)
 
 ## we build another binary so we can do the launch testing without root privs.
 ## DO NOT INSTALL THIS FILE
+## All files that have special cases #ifdef ACTIVATION_LAUNCHER_TEST must
+## be here and in dbus_daemon_launch_helper_SOURCES, not in
+## liblaunch-helper-internal.la.
 dbus_daemon_launch_helper_test_SOURCES=		\
-	activation-helper-bin.c			\
-	$(LAUNCH_HELPER_SOURCES)
-
-dbus_daemon_launch_helper_test_LDADD=		\
-	$(top_builddir)/dbus/libdbus-1.la \
-	$(top_builddir)/dbus/libdbus-internal.la \
-	$(DBUS_LAUNCHER_LIBS)
+	activation-helper.c \
+	activation-helper-bin.c \
+	$(NULL)
+dbus_daemon_launch_helper_test_LDADD = liblaunch-helper-internal.la
 
 dbus_daemon_launch_helper_test_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
@@ -178,15 +185,11 @@ dbus_daemon_launch_helper_test_CPPFLAGS = \
 
 ## we build yet another binary so we can do the OOM tests
 ## DO NOT INSTALL THIS FILE
-test_bus_launch_helper_SOURCES=		\
-	test-launch-helper.c   		\
-	$(LAUNCH_HELPER_SOURCES)
-
-test_bus_launch_helper_LDADD=		\
-	$(top_builddir)/dbus/libdbus-1.la \
-	$(top_builddir)/dbus/libdbus-internal.la \
-	$(DBUS_LAUNCHER_LIBS)
+test_bus_launch_helper_SOURCES = \
+	activation-helper.c \
+	test-launch-helper.c \
 	$(NULL)
+test_bus_launch_helper_LDADD = liblaunch-helper-internal.la
 
 test_bus_launch_helper_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
@@ -196,6 +199,7 @@ test_bus_launch_helper_CPPFLAGS = \
 noinst_PROGRAMS =
 dbus_daemon_exec_PROGRAMS = dbus-daemon
 if DBUS_UNIX
+noinst_LTLIBRARIES += liblaunch-helper-internal.la
 libexec_PROGRAMS = dbus-daemon-launch-helper
 endif DBUS_UNIX
 
@@ -220,31 +224,11 @@ endif DBUS_UNIX
 
 endif DBUS_ENABLE_EMBEDDED_TESTS
 
-test_bus_system_SOURCES=			\
-	config-loader-expat.c			\
-	config-parser-common.c			\
-	config-parser-common.h			\
-	config-parser-trivial.c			\
-	config-parser-trivial.h			\
-	utils.c					\
-	utils.h					\
-	test-system.c
+test_bus_system_SOURCES = test-system.c
+test_bus_system_LDADD = liblaunch-helper-internal.la
 
-test_bus_system_LDADD = \
-	$(top_builddir)/dbus/libdbus-1.la \
-	$(top_builddir)/dbus/libdbus-internal.la \
-	$(DBUS_BUS_LIBS) \
-	$(NULL)
-
-test_bus_SOURCES=				\
-	$(BUS_SOURCES)				\
-	test-main.c
-
-test_bus_LDADD = \
-	$(top_builddir)/dbus/libdbus-1.la \
-	$(top_builddir)/dbus/libdbus-internal.la \
-	$(DBUS_BUS_LIBS) \
-	$(NULL)
+test_bus_SOURCES = test-main.c
+test_bus_LDADD = libdbus-daemon-internal.la
 
 install-data-hook:
 	$(mkinstalldirs) $(DESTDIR)$(dbusdatadir)/session.d
