cmake: Make Autotools consistency check work in out-of-srcdir builds
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -25,8 +25,8 @@ include(MacrosAutotools)
 autoinit(../configure.ac)
 autoversion(dbus)
 
-if(EXISTS ../config.h.in)
-    autoheaderchecks(../config.h.in ConfigureChecks.cmake config.h.cmake)
+if(EXISTS ${CMAKE_SOURCE_DIR}/../config.h.in)
+	autoheaderchecks(${CMAKE_SOURCE_DIR}/../config.h.in ${CMAKE_SOURCE_DIR}/ConfigureChecks.cmake ${CMAKE_SOURCE_DIR}/config.h.cmake)
 else()
     message(STATUS "Generate config.h.in with autogen.sh to enable cmake header difference check.")
 endif()
