test: Move auth, credentials tests from libdbus-internal into test/
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/cmake/test/CMakeLists.txt
+++ b/cmake/test/CMakeLists.txt
@@ -102,7 +102,13 @@ if(DBUS_ENABLE_EMBEDDED_TESTS)
     add_test_executable(test-message-internals ${TEST_DIR}/internals/message-internals.c dbus-testutils)
     set_target_properties(test-message-internals PROPERTIES COMPILE_FLAGS ${DBUS_INTERNAL_CLIENT_DEFINITIONS})
 
-    add_test_executable(test-misc-internals ${TEST_DIR}/internals/misc-internals.c dbus-testutils)
+    set(SOURCES ${TEST_DIR}/internals/dbus-auth-script.c
+                ${TEST_DIR}/internals/dbus-auth-script.h
+                ${TEST_DIR}/internals/dbus-auth-util.c
+                ${TEST_DIR}/internals/dbus-credentials-util.c
+                ${TEST_DIR}/internals/misc-internals.c
+                ${TEST_DIR}/internals/misc-internals.h)
+    add_test_executable(test-misc-internals "${SOURCES}" dbus-testutils)
     set_target_properties(test-misc-internals PROPERTIES COMPILE_FLAGS ${DBUS_INTERNAL_CLIENT_DEFINITIONS})
 
     set(SOURCES ${TEST_DIR}/bus/main.c)
