test: Move string tests (most of dbus-string-util.c) here
Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -230,6 +230,7 @@ test_misc_internals_SOURCES = \
 	internals/dbus-marshal-recursive-util.c \
 	internals/dbus-marshal-recursive-util.h \
 	internals/dbus-marshal-validate-util.c \
+	internals/dbus-string-util.c \
 	internals/misc-internals.c \
 	internals/misc-internals.h \
 	$(NULL)
